--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "tsc:init": "tsc --init"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.17",
+    "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@vitejs/plugin-vue": "^1.1.5",
