--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tsc:init": "tsc --init"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "buffer": "^6.0.3",
     "vue": "^3.0.5"
   },
