--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
-    "buffer": "^6.0.3",
+    "jszip": "^3.6.0",
+    "pica": "^6.1.1",
     "vue": "^3.0.5"
   },
   "devDependencies": {
     "@tailwindcss/jit": "^0.1.17",
-    "@types/node": "^14.14.37",
+    "@types/pica": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@vitejs/plugin-vue": "^1.1.5",
