--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/composition-api": "^0.22.4",
     "@nuxtjs/tailwindcss": "^4.0.3",
     "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
     "imagetracerjs": "^1.2.6",
     "jszip": "^3.6.0",
     "nuxt": "^2.15.4",
@@ -22,21 +23,14 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/svg": "^0.1.12",
-    "@tailwindcss/jit": "^0.1.17",
     "@types/pica": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "@vitejs/plugin-vue": "^1.1.5",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.2.5",
     "eslint": "^7.23.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^7.8.0",
     "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.4",
-    "typescript": "^4.2.3",
-    "vite": "^2.1.3",
-    "vite-svg-loader": "^1.5.1"
+    "typescript": "^4.2.3"
   },
   "author": {
     "name": "Cristopher Namchee",
