--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/svg": "^0.1.12",
+    "@types/node": "^14.14.37",
     "@types/pica": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
