--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
       ]
     },
     "types": [
-      "vite-svg-loader",
-      "vite/client"
+      "@types/node",
+      "@nuxt/types"
     ]
   },
   "include": [
