--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.1.12",
     "@types/node": "^14.14.37",
     "@types/pica": "^5.1.2",
