:art: refactor: Migrate to native canvas image resizing for SVG input

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
+    "lib": [
+      "DOM"
+    ],
     // this enables stricter inference for data properties on `this`
     "strict": true,
     "jsx": "preserve",
