--- a/package.json
+++ b/package.json
@@ -3,31 +3,37 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt generate",
-    "start": "nuxt start"
+    "dev": "nuxi dev",
+    "build": "nuxi generate",
+    "start": "nuxi start"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^4.2.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "jszip": "^3.6.0",
+    "nuxt": "^2.15.8",
+    "nuxt-edge": "^2.16.0-27322574.c1d02ea3",
     "tailwindcss": "^3.0.1"
   },
   "devDependencies": {
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
+    "@nuxt/types": "^2.15.8",
+    "@nuxtjs/eslint-config-typescript": "^8.0.0",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/svg": "^0.3.0",
     "@types/node": "^14.14.37",
     "@types/pica": "^5.1.2",
     "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/composition-api": "^1.4.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^7.23.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^7.8.0",
     "postcss": "^8.4.4",
-    "typescript": "^4.2.3",
-    "vite": "^2.7.1",
-    "vue-tsc": "^0.29.8"
+    "typescript": "^4.5.3"
   },
   "author": {
     "name": "Cristopher Namchee",
