--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "jszip": "^3.6.0",
     "nuxt": "^2.15.8",
-    "nuxt-edge": "^2.16.0-27322574.c1d02ea3",
-    "tailwindcss": "^3.0.1"
+    "nuxt-edge": "^2.16.0-27322574.c1d02ea3"
   },
   "devDependencies": {
     "@nuxt/bridge": "npm:@nuxt/bridge-edge",
@@ -28,11 +27,10 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@vue/composition-api": "^1.4.1",
-    "autoprefixer": "^10.4.0",
     "eslint": "^7.23.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^7.8.0",
-    "postcss": "^8.4.4",
+    "nuxt-windicss": "^2.1.1",
     "typescript": "^4.5.3"
   },
   "author": {
