--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@vueuse/head": "^0.7.4",
+    "esm-potrace-wasm": "^0.2.1",
     "jszip": "^3.6.0",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "@types/nprogress": "^0.2.0",
     "@types/pica": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
