--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@vueuse/head": "^0.7.4",
@@ -16,6 +17,8 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@jest/types": "^27.4.2",
+    "@types/jest": "^27.0.3",
     "@types/node": "^14.14.37",
     "@types/nprogress": "^0.2.0",
     "@types/pica": "^5.1.2",
@@ -29,12 +32,15 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.3",
     "vite": "^2.7.2",
     "vite-plugin-pwa": "^0.11.11",
     "vite-plugin-windicss": "^1.5.4",
     "vite-svg-loader": "^3.1.1",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.29.8",
+    "vue3-jest": "^27.0.0-alpha.1"
   },
   "author": {
     "name": "Cristopher Namchee",
