--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "esnext",
     "module": "esnext",
     "lib": [
-      "DOM"
+      "DOM",
+      "ES2019.Array"
     ],
     "strict": true,
     "jsx": "preserve",
