--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/head": "^0.7.4",
+    "browser-image-compression": "^1.0.17",
     "imagetracerjs": "^1.2.6",
     "jszip": "^3.6.0",
     "nprogress": "^0.2.0",
