--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src/**/*",
+    "lint": "eslint ./src/**/*.ts ./src/**/*.vue",
     "test:unit": "jest"
   },
   "dependencies": {
