fix: fix typo from unut to unit

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Lint code
         run: yarn lint
       - name: Run unit test
-        run: yarn test:unut
+        run: yarn test:unit
