--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@jest/types": "^27.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/jest": "^27.0.3",
     "@types/node": "^14.14.37",
     "@types/nprogress": "^0.2.0",
@@ -32,16 +34,18 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-rc.17",
     "@vue/vue3-jest": "^27.0.0-alpha.4",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.4.1",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3",
     "vite": "^2.7.2",
     "vite-plugin-pwa": "^0.11.11",
-    "vite-plugin-windicss": "^1.5.4",
     "vite-svg-loader": "^3.1.1",
     "vue-tsc": "^0.29.8",
     "vue3-jest": "^27.0.0-alpha.1"
